# mcpipe

./: .gitignore  CLAUDE.md  Cargo.toml  HANDOFF.mcpipe.workspace.yaml  HANDOFF.md  Justfile  README.md  deny.toml  doob.openapi.yaml
.ctx/: HANDOFF.mcpipe.mcpipe.yaml
docs/superpowers/plans/: 2026-04-02-mcpipe-impl.md  2026-04-04-cli-backend-openapi-gen.md  2026-04-04-scan-all.md
docs/superpowers/specs/: 2026-04-02-mcpipe-design.md
src/: cache.rs  cli.rs  deser.rs  discovery.rs  domain.rs  format.rs  lib.rs  main.rs  openapi_gen.rs  secret.rs
src/backend/: cli.rs  graphql.rs  mcp.rs  mod.rs  openapi.rs
src/scanner/: claude_config.rs  mod.rs  path_binary.rs  well_known.rs  workspace.rs
tests/: cli_backend.rs  graphql_adapter.rs  integration_test.rs  mcp_adapter.rs  openapi_adapter.rs  scanner_claude_config.rs  scanner_path_binary.rs  scanner_workspace.rs
tests/fixtures/: claude_settings.json  introspection.json  mcp_echo.py  mcp_project.json  petstore.json
