[package]
name = "mcpipe"
version = "0.1.0"
edition = "2024"
description = "Turn any MCP server, OpenAPI spec, or GraphQL endpoint into a shell CLI"
license = "MIT OR Apache-2.0"

[[bin]]
name = "mcpipe"
path = "src/main.rs"

[lib]
name = "mcpipe"
path = "src/lib.rs"

[features]
integration = []

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = { version = "0.8", features = ["parse"] }
json5 = "0.4"
async-trait = "0.1"
anyhow = "1"
thiserror = "1"
sha2 = { version = "0.10", features = [] }
hex = "0.4"
eventsource-client = "0.12"
dirs = "5"

[dev-dependencies]
tempfile = "3"
